# ncell

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: displaySheet.cpp.411848D5C67EE538.idx  enum_definitions.h.471C6E9D129C5EC8.idx  enums.h.B7A3FB237166C92F.idx  main.cpp.8CABE81BAF351025.idx  readconfig.cpp.3182C7173D19D765.idx  worksheet.cpp.ABEF1C5A18EE4012.idx  worksheet.h.0D809A5AF724EE43.idx
config/: colors.txt  keymap.txt
include/: enum_definitions.h  enums.h  readconfig.h  worksheet.h
src/: CMakeLists.txt  displaySheet.cpp  main.cpp  mainloop.cpp  readconfig.cpp  worksheet.cpp
tools/: colorTest.html  colorTestGenerator.py  generateEnumOutputs.py  test.cpp
